src/ArticleDrawer.css
.ExpandButton {
  color: #aaa;
  margin: 0.5rem;
}
.ArticleDrawer {
  background-color: #eee;
  cursor: pointer;
  transition: background-color 0.3s;
}
.ArticleDrawer:hover {
  background-color: #ddd;
}

.DrawerTitle {
  font-size: calc(8px + 2vmin);
  color: #222;
  font-weight: bold;
  text-align: left;
  margin: 8px 16px;
}

